Fix ribbons that were broken in the following commit:
commit 47be6685f454aadab338e220572f9db83dc80085
Author: Kris <kris@plink.com>
Date:   Wed Jul 24 12:21:36 2013 -0600

    Styled Wallet Page

--- a/app/assets/stylesheets/wallet.css.scss
+++ b/app/assets/stylesheets/wallet.css.scss
@@ -108,6 +108,20 @@
     left: -7px;
     position: absolute;
     top: -7px;
+
+    background-repeat: no-repeat;
+    width: 77px;
+    height: 62px;
+    overflow: hidden;
+    text-indent: 100%;
+    white-space: nowrap;
+  }
+  .ribbon.ribbon-new-offer {
+    background: image-url('ribbon_new_offer.png');
+  }
+
+  .ribbon.ribbon-promo-offer {
+    background: image-url('ribbon_promo_offer.png');
   }
 
   .slot {
@@ -137,7 +151,7 @@
     }
 
     .slot-inner {
-      position:relative;  
+      position:relative;
     }
 
     .brand {
